[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kube_medic"
version = "1.0.0"
description = "AI-powered Kubernetes troubleshooting agent using LangChain."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "langchain>=1.2.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "kubernetes>=31.0.0",
    "prometheus-api-client>=0.5.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # New dependencies for reliability improvements
    "slowapi>=0.1.9",         # Rate limiting
    "tenacity>=8.2.0",        # Retry logic with exponential backoff
    "cachetools>=5.3.0",      # TTL-based caching
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
kube-medic = "kube_medic.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kube_medic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]